--- a/addons/skins/Default/resources/styles.css
+++ b/addons/skins/Default/resources/styles.css
@@ -7,7 +7,7 @@ here if necessary.
 
 /* Global */
 body {font-size:14px; font-weight: normal; margin:0; overflow-y:scroll; background:#fff; color:#666}
-body, input, textarea, select {font-family:open sans,lucida grande,lucida sans unicode,helvetica,arial,sans-serif}
+body, input, textarea, select {font-family:"Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft Yahei", sans-serif}
 input, textarea, select {font-size:100%}
 strong {font-weight:600}
 
@@ -46,7 +46,7 @@ p, ul, pre {line-height:1.6em}
 
 
 /* Posts */
-.postHeader h3 {font-size:120%; font-weight:600}
+.postHeader h3 {font-size:100%; font-weight:600}
 .postBody h4 {font-weight:300}
 .replyPlaceholder .postHeader h3 {font-weight:300}
 .postBody {line-height:1.75em; font-size:16px}
