--- a/core/skin/base.css
+++ b/core/skin/base.css
@@ -468,7 +468,7 @@ a.deleteLink:hover {color:#f00 !important; text-decoration:line-through}
 .postHeader .controls {float:right; margin-top:3px}
 
 .postBody {line-height:1.5em; overflow:auto; padding:0px 15px}
-.postBody img {vertical-align:bottom; max-width:100%}
+.postBody img {vertical-align:bottom; border: 1px solid #ddd; max-width: 95%; box-shadow: 0 0 10px #ccc; -moz-box-shadow: 0 0 10px #ccc; -webkit-box-shadow: 0 0 10px #ccc; margin-bottom: 30px; margin-top: 10px; margin-left: 2%;}
 .postBody ul {list-style-type:disc}
 
 .deleted .postHeader {margin:0; padding:6px 5px 6px 12px}
