--- a/addons/skins/Default/resources/styles.css
+++ b/addons/skins/Default/resources/styles.css
@@ -22,7 +22,7 @@ small {font-size:85%}
 
 
 /* Block styles */
-h1 {font-size:150%; font-weight:300}
+h1 {font-size:150%; font-weight:normal}
 h2 {font-size:160%; font-weight:300}
 h3 {font-size:115%; font-weight:600}
 h4 {font-weight:600}
@@ -47,7 +47,7 @@ p, ul, pre {line-height:1.6em}
 
 /* Posts */
 .postHeader h3 {font-size:100%; font-weight:600}
-.postBody h4 {font-weight:300}
+.postBody h4 {font-weight:normal}
 .replyPlaceholder .postHeader h3 {font-weight:300}
 .postBody {line-height:1.75em; font-size:16px}
 
