--- a/addons/skins/Default/resources/styles.css
+++ b/addons/skins/Default/resources/styles.css
@@ -47,7 +47,7 @@ p, ul, pre {line-height:1.6em}
 
 /* Posts */
 .postHeader h3 {font-size:100%; font-weight:600}
-.postBody h4 {font-weight:normal}
+.postBody h4 {font-weight:600}
 .replyPlaceholder .postHeader h3 {font-weight:300}
 .postBody {line-height:1.75em; font-size:16px}
 
