--- a/addons/skins/Default/resources/styles.css
+++ b/addons/skins/Default/resources/styles.css
@@ -6,7 +6,7 @@ here if necessary.
 */
 
 /* Global */
-body {font-size:14px; font-weight: normal; margin:0; overflow-y:scroll; background:#fff; color:#666}
+body {font-size:14px; font-weight: normal; margin:0; overflow-y:scroll; background:#fff}
 body, input, textarea, select {font-family:"Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft Yahei", sans-serif}
 input, textarea, select {font-size:100%}
 strong {font-weight:600}
